# visualgl

./: .gitignore  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
test/: common.py  test_camera.py  test_frozen_dict.py
test/visual/: test_camera.py  test_frozen_dict.py
test/window/: test_viewport.py
test/window/layouts/: test_grid.py
visual/: __init__.py  __main__.py  ambient_light.py  bindings.py  camera.py  camera_controller.py  exceptions.py  frozen_dict.py  log.py  projection.py  renderer.py  scene.py  settings.json  simulation.py  utils.py  window.py
visual/filetypes/stl/: stl_parser.py  stl_type.py
visual/messaging/: listener.py
visual/opengl/: buffer.py  decorators.py  exceptions.py  shader.py  shader_program.py  uniform.py  uniform_buffer.py
visualgl/: __init__.py  ambient_light.py  application.py  bindings.py  camera.py  controller.py  exceptions.py  input_handler.py  renderer.py  settings.py  simulation.py  timer.py  utils.py  window.py
visualgl/camera/: __init__.py  camera.py  camera_controller.py  camera_controller_parameters.py  camera_settings.py  exceptions.py  projection.py
visualgl/filetypes/stl/: stl_parser.py  stl_writer.py
visualgl/messaging/: emitter.py  event.py  listener.py  registry.py
visualgl/opengl/: buffer.py  decorators.py  exceptions.py  shader.py  shader_program.py  uniform.py  uniform_buffer.py
visualgl/scene/: __init__.py  scene.py
visualgl/window/: __init__.py  exceptions.py  input_event.py  input_handler.py  layout.py  viewport.py  window.py
visualgl/window/layouts/: grid.py
visualgl/window/viewports/: scene_viewport.py
