[tool.poetry]
name = "visual"
version = "0.0.1"
description = "OpenGL in Python."
authors = ["James Schwartz"]

[tool.poetry.dependencies]
python = "~3.9"
spatial = { git = "https://github.com/jbschwartz/spatial.git", tag="v0.3.0" }
glfw = "^2.5.3"
numpy = "^1.22.3"
PyOpenGL = "^3.1.6"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
mypy = "^0.950"
pydocstyle = "^6.1.1"
pylint = "^2.13.7"
coverage = "^6.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.pydocstyle]
match='(?!test_).*\.py'
ignore = "D100, D203"

[tool.pylint.'MESSAGES CONTROL']
disable = "C0114"
good-names = "x,y,z"
