[tool.poetry]
name = "visual"
version = "0.0.1"
description = "OpenGL in Python."
authors = ["James Schwartz"]

[tool.poetry.dependencies]
python = "^3.8"
spatial = { git = "https://github.com/jbschwartz/spatial.git", tag="v0.6.2" }
glfw = "^2.5.4"
numpy = "^1.23.1"
PyOpenGL = "^3.1.6"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
mypy = "^0.971"
pydocstyle = "^6.1.1"
pylint = "^2.14.5"
coverage = "^6.4.3"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.pydocstyle]
match='(?!test_).*\.py'
ignore = "D100, D203"

[tool.pylint.'MESSAGES CONTROL']
disable = "C0114"
good-names = "x,y,z"
